# library

./: .gitignore  Cargo.toml  README.md  dump-example.json  schema.sql
SQL/: author_write-many.sql  book_write-many.sql  tag-book_write-many.sql  tag_write-many.sql
src/: actions.rs  cli.rs  config.rs  db.rs  error_handling.rs  lib.rs  main.rs  miscutils.rs
src/actions/: author.rs  book.rs  dump.rs  schema.rs  tag.rs  views.rs
src/cli/: author.rs  book.rs  dump.rs  tag.rs
src/db/: as_row.rs  author.rs  book.rs  dump.rs  links.rs  reading_list.rs  schema.rs  tag.rs  views.rs
src/db/SQL/: author-book_write-many.sql  author-complete_list.sql  book-complete_list.sql  book-dump_list.sql  tag-complete_list.sql
