[package]
name = "book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging crates
log = "0.4"
env_logger = "0.9"

# Share configuration and database pool without hassles
once_cell = "1.13"

# .env parsing
dotenv_codegen = "0.15"

# Libraries for async
tokio = { version = "1.19", features = ["full"] }
futures = "0.3"

# Hassle free (de)serialization of structs
serde = { version = "1", features = ["derive"] }

# Datetime library
time = "0.3"

# Database connection
[dependencies.sqlx]
version = "0.6"
features = [
  "runtime-tokio-native-tls",
  "postgresql",
  "json",
  "uuid",
  "time"
]

# Parse UUIDs, used by sqlx
[dependencies.uuid]
version = "1.1.2"
features = ["serde"]