[package]
name = "book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging crates and error handling
log = "0.4"
env_logger = "0.9"
thiserror = "1.0"

# Shared configuration
once_cell = "1.13"
dotenv_codegen = "0.15"

# Async libraries
tokio = { version = "1.19", features = ["full"] }
futures = "0.3"

# Hasslefree (de)serialization of structs
serde = { version = "1", features = ["derive"] }

# Datetime library
time = "0.3"

# Database connection
[dependencies.sqlx]
version = "0.6"
features = [
  "runtime-tokio-native-tls",
  "postgres",
  "json",
  "uuid",
  "time"
]

# Parse UUIDs, used by sqlx
[dependencies.uuid]
version = "1.1.2"
features = ["serde"]